Fixed CSS Overlap Issue

--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-.circle {
-  width: 25px;
-  height: 25px;
-  border-radius: 10%;
-  background-color: none;
-  border: #FFF 10px solid;
-  display: "inline-block";
-  position: absolute;
-}
 #mainContainer {
 width: 100%;
 height: 100%;
@@ -14,12 +5,6 @@ height: 100%;
 
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 @import url(https://fonts.googleapis.com/css?family=Handlee);
-
-body {
-    margin: 30px 0 0;
-    background: #91D1D3;
-    font-family: 'Roboto', sans-serif;
-}
 
 .paper {
     position: absolute;
@@ -82,14 +67,4 @@ body {
     font-size: 10px;
     box-sizing: border-box;
     z-index: 1;
-}
-
-footer {
-    margin-top: 15px;
-    text-align: center;
-    font-size: 12px;
-    color: rgba(0,0,0,.6);
-}
-footer a {
-    color: rgba(255,255,255,.8);
 }
